--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.10",
-    "nuxt": "^3.2.2"
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
+    "mitt": "^3.0.0",
+    "nuxt": "^3.2.2",
+    "simplebar-vue": "^2.3.0",
+    "uuid": "^9.0.0"
   }
 }
